<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Измеритель качества электроэнергии</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="category_names">
        <item>220</item>
        <item>380</item>
        <item>6</item>
        <item>10</item>
        <item>35</item>
        <item>110</item>
    </string-array>
    <string name="label_1">220</string>
    <string name="label_2">380</string>
    <string name="label_3">6</string>
    <string name="label_4">10</string>
    <string name="label_5">35</string>
    <string name="label_6">110</string>
    <string name="V">В</string>
    <string name="kV">кВ</string>
    <string name="link"><a href="https://xn--80aaafp0bqweeid1o.xn--p1ai/platform/portal/cons_main">ссылке</a></string>
    <string name="problemVoltage">\n%1$s. Напряжение %2$s при норме %3$s</string>
    <string name="problemFrequency" tools:ignore="TypographyDashes">\n%1$s. Частота %2$s Гц при норме 49.6 - 50.4 Гц</string>
    <string name="problemAsymmetry" tools:ignore="TypographyDashes">\n%1$s. Несимметрия %2$s %% при норме 0 - 4 %%</string>
    <string name="problemNonSinus">\n%1$s. Несинусоидальность %2$s %% при норме %3$s %%</string>
    <string name="voltage_less198_more242">Необходимо уведомить сетевую и энергосбытовую компанию.Пожаловаться можно через сайт компании: https://светлаястрана.рф . Контактную информацию энергосбытовой компании можно узнать в квитанции об оплате электроэнергии.</string>
    <string name="asymmetry2_4">Значение показателя превышет значение в интервале 95%% времени. Но находится в рамках предельных допустимых значений для 100%% времени. Рекомендации. Провести недельные замеры с наличием собственной нагрузи и без (для понимания влияния собственных энергоприемников).
По результатам разработать План исходя из полученных значений. Оценить возможность пофазного изменения нагрузки.</string>
    <string name="asymmetryMore4">Значение показателя превышет допустимые.
Рекомендации. Провести недельные замеры с наличием собственной нагрузи и без (для понимания влияния собственных энергоприемников).
По результатам разработать План исходя из полученных значений. Оценить возможность пофазного изменения нагрузки.</string>
    <string name="nonSinusLess">Значение показателя суммарного коэффициента гармонической составляющей, превышет значение в интервале 95%% времени. Но находится в рамках допустимых значений для 100%% времени.
Рекомендации. Провести недельные замеры с наличием собственной нагрузи и без (для понимания влияния собственных энергоприемников).
Если проблема с отсуствием собственной нагрузки остается, то обратитесь в сетевую и энергосбытовую компанию;
Если проблема при отключении собсвенного потребления решается, то необходим анализ источников собственного искажения.</string>
    <string name="nonSinusMore">Значение показателя суммарного коэффициента гармонической составляющей, превышет допустимые значание.
Рекомендации. Провести недельные замеры с наличием собственной нагрузи и без (для понимания влияния собственных энергосприемников).
Если проблема с отсуствием собственной нагрузки остается, то обратитесь в сетевую и энергосбытовую компанию;
Если проблема при отключении собсвенного потребления решается, то необходим анализ источников собственного искажения</string>
    <string name="reference_text" tools:ignore="TypographyDashes">Анализ данных по нормативным значениям проводится на основании ГОСТ 32144-2013 г.\n\nАнализ данных проводится по предельно допустимым значениям (в течении 100% времени измерений) в соответствии с ГОСТ 32144-2013 г.\n\nПри аварийном отключении для подачи жалобы укажите \'0\' в графе напряжение.</string>
    <string name="tne">ООО \'Транснефтьэнерго\', для потребителей-юридических лиц, предлагается воспользоваться услугой: Качество по ГОСТ и выше ГОСТ.\nПодробности по <a href="https://transneftenergo.ru/">ссылке</a></string>
    <string name="problems">Обнаружены проблемы:</string>
    <string name="voltage">Напряжение, В</string>
    <string name="frequency">Частота, Гц</string>
    <string name="nonSinusoidality">Несинусоидальность, %</string>
    <string name="asymmetry">Несимметрия, %</string>
    <string name="standardVoltage">Выберите номинальное напряжение</string>
    <string name="analysis">Анализ</string>
    <string name="reset">Сбросить</string>
    <string name="textTitleMain">Анализ качества энергоснабжения</string>
    <string name="analysisTab">Анализ</string>
    <string name="referenceTab">Справка</string>
    <string name="recommendationsTab">Отчёт</string>
    <string name="textEmptyAnalysis">Для получения рекомендаций необходимо выполнить анализ</string>
    <string name="textPowerOutage">Сообщить об отключении электроэнергии</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="textIfPowerOutageTrue">Рекомендация при отключении электроэнергии: нужно обратиться в энергосбытовую или управляющую организацию. Если вы подключены к сетям ПАО \'Россети\', то жалобы можно оставить на сайте: https://светлаястрана.рф</string>
    <string name="enterValues">Введите значения</string>
    <string name="note">Примечание: При аварийном отключении для подачи жалобы укажите \'0\' в графе напряжение</string>


</resources>