<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FragmentRecommendations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/textEmptyAnalysis"
            android:textColor="#282828"
            android:textSize="20sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textProblems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:text="@string/problems"
            android:textColor="#282828"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/problems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="#282828"
            android:textSize="16sp"
            tools:text="@string/voltage_less198_more242" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textIfPowerOutageTrue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/textIfPowerOutageTrue"
            android:textColor="#282828"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/botText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:text="@string/tne"
            android:textColor="#282828"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>